v1
static npc and trader entitys

v2
add mobkit, make npcs hop around

v3
fix npc animations, add additional texture

v4
refactor code from init.lua to multiple files
add api

v5
ability to enable and disable mobs at will

v6
added flash_color to api
used flash_color in villager 

v7
added nametags
made brains global

v8
made traders work with same functionality as villagers for now
added valuable item setting for traders, defaults to mithite ore(mod provided)

v9
WIP trader formspec
merge mod into farlands_reloaded
move mithite ore to fl_terrain