@@ -1,0 +1,4 @@
+minetest.register_tool("fl_tools:shears", {
+    description = "shears",
+    inventory_image = "farlands_shears.png",
+})
